--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -21,17 +21,17 @@ jobs:
           # API_BASE_URL: https://wakatime.com/api # optional
           # REPOSITORY: YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME # optional
           ### content
-          SHOW_TITLE: true # optional
-          SECTION_NAME: waka # optional
-          BLOCKS: -> # optional
-          CODE_LANG: rust # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
-          SHOW_TIME: true # optional
-          SHOW_TOTAL: true # optional
-          SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: true # optional
-          IGNORED_LANGUAGES: YAML JSON TOML # optional
+          # SHOW_TITLE: true # optional
+          # SECTION_NAME: waka # optional
+          # BLOCKS: -> # optional
+          # CODE_LANG: rust # optional
+          # TIME_RANGE: all_time # optional
+          # LANG_COUNT: 10 # optional
+          # SHOW_TIME: true # optional
+          # SHOW_TOTAL: true # optional
+          # SHOW_MASKED_TIME: false # optional
+          # STOP_AT_OTHER: true # optional
+          # IGNORED_LANGUAGES: YAML JSON TOML # optional
           ### commit
           # COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
           # TARGET_BRANCH: master # optional
